[gd_scene load_steps=10 format=3 uid="uid://0g1rtkl5xmnr"]

[ext_resource type="Script" uid="uid://d1b4v4evbo70w" path="res://scripts/systems/choice_menu.gd" id="1_m28ly"]
[ext_resource type="Texture2D" uid="uid://nb4ewsb4si2k" path="res://assets/images/UI/Notebook_One_Page.png" id="2_gj666"]
[ext_resource type="PackedScene" uid="uid://bbxtvoxr3o46g" path="res://scenes/ui/buttons/options_button.tscn" id="3_gj666"]
[ext_resource type="PackedScene" uid="uid://d4esbmy5okqdj" path="res://scenes/ui/buttons/back_button.tscn" id="3_lkg56"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fa8ht"]
texture = ExtResource("2_gj666")
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[sub_resource type="Animation" id="Animation_gj666"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.75, 0.75)]
}

[sub_resource type="Animation" id="Animation_lkg56"]
resource_name = "panel_in"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0.75, 0.75)]
}

[sub_resource type="Animation" id="Animation_fa8ht"]
resource_name = "panel_out"
length = 0.3
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Panel:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.75, 0.75), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_fa8ht"]
_data = {
&"RESET": SubResource("Animation_gj666"),
&"panel_in": SubResource("Animation_lkg56"),
&"panel_out": SubResource("Animation_fa8ht")
}

[node name="Choice_Menu" type="CanvasLayer"]
layer = 2
script = ExtResource("1_m28ly")

[node name="MouseBlocker" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.156863)

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(600, 450)
offset_left = 613.0
offset_top = -244.0
offset_right = 1613.0
offset_bottom = 756.0
scale = Vector2(0.75, 0.75)
pivot_offset = Vector2(1, 999.333)
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_fa8ht")

[node name="QuitButton" parent="Panel" instance=ExtResource("3_lkg56")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.642
anchor_top = 0.069
anchor_right = 0.642
anchor_bottom = 0.069
offset_left = -71.64
offset_top = -40.52
offset_right = 73.36
offset_bottom = 40.48

[node name="BackButton" parent="Panel" instance=ExtResource("3_lkg56")]
layout_mode = 2
anchors_preset = 0
anchor_left = 0.402
anchor_top = 0.073
anchor_right = 0.402
anchor_bottom = 0.073
offset_left = -72.84
offset_top = -40.84
offset_right = 72.16
offset_bottom = 40.16
text = "<<<"
start_visible = false

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = -0.017
anchor_right = 1.05
anchor_bottom = 0.983
offset_right = -0.00012207
offset_bottom = -6.10352e-05
grow_horizontal = 2
grow_vertical = 2

[node name="MainChoices" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 35

[node name="Btn_Where" parent="Panel/MarginContainer/MainChoices" instance=ExtResource("3_gj666")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Where were you this ..."
autowrap_mode = 0

[node name="Btn_Doing" parent="Panel/MarginContainer/MainChoices" instance=ExtResource("3_gj666")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "What were you doing in..."
autowrap_mode = 0

[node name="Btn_Cake" parent="Panel/MarginContainer/MainChoices" instance=ExtResource("3_gj666")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Did you eat my cake?"

[node name="Btn_Secret" parent="Panel/MarginContainer/MainChoices" instance=ExtResource("3_gj666")]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "I know your secret!"

[node name="SubChoices" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 20

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_fa8ht")
}
